--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python3 -m pip install ".[doc]"
+          python3 -m pip install ".[docs]"
 
       - name: Build docs
         run: |
