--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
+demo/*.png
+demo/*.dot
 # Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode
 
