--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,8 @@ docs =
     Sphinx
     myst-parser
     sphinx-book-theme
+gui =
+    streamlit
 plot =
     matplotlib
     pydot
@@ -79,3 +81,9 @@ testpaths =
 files = src/modelgraph,tests
 ignore_missing_imports = true
 exclude = docs
+
+[coverage:run]
+omit =
+    src/modelgraph/gui.py
+    src/modelgraph/cli.py
+    src/modelgraph/__main__.py
