Add missing dependency click

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ keywords = ODE, models, graphs, dependencies
 [options]
 packages = find:
 install_requires =
+    click
     gotran
     networkx
 python_requires = >=3.7
