--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 demo/*.png
 demo/*.dot
+docs/source/hodgkin_huxley.md
 # Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode
 
