--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ install_requires =
     click
     gotran
     networkx
+    importlib-metadata;python_version<'3.8'
 python_requires = >=3.7
 package_dir =
     =src
