--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
     rev: v3.0.1
     hooks:
       - id: reorder-python-imports
+        exclude: ^demo/
 
   - repo: https://github.com/psf/black
     rev: 22.3.0
