--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,39 +2,28 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
-      - id: check-yaml
-      - id: end-of-file-fixer
       - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
       - id: check-docstring-first
       - id: debug-statements
+      - id: check-toml
 
-  - repo: https://github.com/asottile/reorder-python-imports
-    rev: v3.16.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: 'v0.14.1'
     hooks:
-      - id: reorder-python-imports
-        exclude: ^demo/
-
-  - repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 25.9.0
-    hooks:
-      - id: black
-
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.0.0
-    hooks:
-      - id: flake8
-
-  - repo: https://github.com/asottile/add-trailing-comma
-    rev: v4.0.0
-    hooks:
-      - id: add-trailing-comma
-
-  - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v3.1.0
-    hooks:
-      - id: setup-cfg-fmt
+       # Run the linter.
+      - id: ruff-check
+        args: [ --fix ]
+      # Run the formatter.
+      - id: ruff-format
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.18.2
     hooks:
       - id: mypy
+        additional_dependencies: ["types-attrs"]
+        files: ^src/|^tests/
+        args: ["--config-file", "pyproject.toml"]
